--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+<h1>Time Complexity</h1>
+<p>Time Complexity and efficient: The time complexity of an algorithm quantifies the amount of time taken by an algorithm to run as a function of the length of the input</p>
+
+<h1>Space Complexity</h1>
+<p> <b>Space complexity:</b>refers to the total amount of memory space used by an algorithm/program, including the space of input values for execution. </p>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
