--- a/main.html
+++ b/main.html
@@ -1,23 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <html>
+	<head>
+		<title>Time and Space Complexity</title> 
+	</head>
+	<body> 
+<h1>Time, Space, and Complexity</h1>
 
-<html>
+<p>Time complexity refers to the amount of time it takes for an algorithm to run, and it is a measure of the efficiency of the algorithm. It is often denoted as O(f(n)), where f(n) represents the growth rate of the algorithm as the input size increases. An algorithm with a lower time complexity is considered more efficient as it takes less time to execute.</p>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-	
-<h1>Time Complexity</h1>
-<p>Time Complexity and efficient: The time complexity of an algorithm quantifies the amount of time taken by an algorithm to run as a function of the length of the input</p>
-
-<h1>Space Complexity</h1>
-<p> <b>Space complexity:</b>refers to the total amount of memory space used by an algorithm/program, including the space of input values for execution. </p>
-
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+<p><b>Space Complexity</b> refers to the amount of memory space required by an algorithm to run, and it is also a measure of the efficiency of the algorithm. It is often denoted as O(n), where n represents the input size. The space complexity of an algorithm determines how much memory it needs to store and manipulate data. Algorithms with a lower space complexity are considered more efficient as they require less memory.</p>
+	</body>
 </html>
